# PETC

./: .gitignore  Makefile  README.md  docker-compose.yml
desktop/: package-lock.json  package.json  pyproject.toml  requirements.txt
desktop/electron/: bridge.d.ts  main.ts  preload.ts  tsconfig.json
desktop/installer/: electron-builder.yml  petc_sidecar.spec
desktop/renderer/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/renderer/src/: App.js  App.tsx  index.css  testSetup.js  testSetup.ts
desktop/renderer/src/api/: sidecarClient.js  sidecarClient.ts
desktop/renderer/src/components/: AppShell.js  AppShell.tsx  CameraStream.tsx
desktop/renderer/src/store/: authStore.js  authStore.ts
desktop/renderer/src/types/: index.ts
desktop/renderer/src/utils/: emissionLimits.js  emissionLimits.ts
desktop/sidecar/petc/: __init__.py  service.py
desktop/sidecar/petc/analyzer/: __init__.py  ascii_gas.py  base.py  binary_diesel.py  builder.py  fofen_ascii.py  fofen_framing.py  fofen_gas.py  fty_opacimeter.py  mock.py  serial_base.py
desktop/sidecar/petc/api/: __init__.py  server.py
desktop/sidecar/petc/camera/: __init__.py  builder.py  capture.py  opencv_camera.py
desktop/sidecar/petc/cec/: pdf.py
desktop/sidecar/petc/cloud_sync/: __init__.py  pusher.py
desktop/sidecar/petc/db/: __init__.py  models.py  session.py
desktop/sidecar/petc/gov/: __init__.py  base.py  (+2 more)
desktop/tests/: test_analyzer.py  test_api.py  test_outbox.py  test_serial_analyzers.py
desktop/tests/fixtures/: gas_no_optional.txt  gas_pass.txt
(+90 files in other folders)
