[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "petc-sidecar"
version = "0.1.0"
description = "PETC sidecar — hardware bridge and local API for emission testing centers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pyserial>=3.5",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "passlib[bcrypt]>=1.7",
    "python-jose[cryptography]>=3.3",
    "python-multipart>=0.0.9",
    "opencv-python-headless>=4.10",
    "reportlab>=4.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]
printer = ["python-escpos>=3.1"]

[project.scripts]
petc-sidecar = "petc.service:run"

[tool.setuptools.packages.find]
where = ["sidecar"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["sidecar/tests"]
